# Exploring-MuZero-on-DOG

./: .gitignore  Experiment_33_100_reward_discount.txt  README.md  check_jax_device.py  classification_test.py  eval_results.md  game.py  notes.md  pyproject.toml  simple_test.py  simple_test_output.txt  simple_test_output200.txt  test.py  test_reward_discount.py  test_training_20260110.txt  test_training_20260113.txt  training_debug_20260220_173416.txt  training_debug_20260222_005353.txt  utility_funcs.py
DOG/: dog.py  speedtest.ipynb  test.py
MADN/: card_prototype.ipynb  classic_madn.py  deterministic_madn.py  madn.py  notes.md  simulate.py  simulate_classicMADN.py  simulate_deterministicMADN.py  step_branching_test.ipynb  test.py  test_functions.ipynb  visualize_madn.py
MuZero/: evaluate_agent.py  evaluate_agent_stochastic.py  game_agent.py  game_agent_stochastic.py  muzero_classic_madn.py  muzero_config.py  muzero_deterministic_madn.py  perform_eval_general.py  replay_buffer.py  train.py  train_stochastic.py  train_with_reward.py  vec_replay_buffer.py  vec_replay_buffer_stochastic.py
MuZero_Classic_MADN/: classification_test_stochastic.py  eval_result_stochastic.md  evaluate_agent_stochastic.py  game_agent_stochastic.py  muzero_classic_madn.py  stochastic_muzero_madn_params_lr0.005_g1500_it100_seed3.pkl_stochastic_tests.txt  train_stochastic.py  vec_replay_buffer_stochastic.py
MuZero_DOG/: evaluate_agent.py  game_agent.py  muzero_dog.py  train.py
MuZero_det_MADN/: classification_test.py  evaluate_agent.py  ffa_classification.py  game_agent.py  train.py  (+4 more)
(+58 files in other folders)
