[project]
name = "exploring-muzero-on-dog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.0",
    "jax>=0.7.2",
    "mctx>=0.0.6",
    "optax>=0.2.6",
    "pillow>=12.0.0",
    "pygame>=2.6.1",
    "pytest>=8.4.2",
    "wandb>=0.24.0",
]
[project.optional-dependencies]
cuda = [
    "jax[cuda13]",  # Überschreibt CPU-Version
]